# harness-marketplace-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  MEMORY.md  README-ko.md  README.md  UPGRADE-ko.md  UPGRADE.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ai-readiness.yml
.husky/: pre-commit
benchmarks/: README.md  package.json
benchmarks/results/: agent-results.json  aggregated.json  phase0-report.md  phase05-report.md  probe.json
benchmarks/results/raw/fastapi-expert__control__n2__2026-04-13T02-48-46-276Z/project/: README.md  TASK.md  pyproject.toml
benchmarks/results/raw/fastapi-expert__control__n2__2026-04-13T02-48-46-276Z/project/app/: main.py
benchmarks/results/raw/fastapi-expert__control__n2__2026-04-13T02-48-46-276Z/project/app/models/: __init__.py  post.py  user.py
benchmarks/results/raw/fastapi-expert__control__n2__2026-04-13T02-48-46-276Z/project/app/routes/: users_with_posts.py
benchmarks/results/raw/fastapi-expert__control__n2__2026-04-13T02-48-46-276Z/project/tests/: test_users_with_posts.py
benchmarks/runner/: batch.js  invoke.js  probe.js  render-harness.js  run-control.js  run-treatment.js  run.js
benchmarks/scorer/: aggregate-v2.js  automated.js  (+3 more)
data/: agents.yaml  debug-strategies.yaml  guides.yaml
docs/: AI-READINESS.md  ARCHITECTURE.md
scripts/: CLAUDE.md  ai-readiness-score.py  validate-harness.js
templates/: CLAUDE.md.template  classification.md  codebase-analysis.md  config-schema.yaml  implement.md  orchestrator.md
tests/: hooks-smoke.sh
(+296 files in other folders)
